--- a/ChristmasJam21Team8/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ChristmasJam21Team8/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -382,29 +382,29 @@ LastLevel=/Game/Maps/Main_Scene
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-CleanShutdown=True
+CleanShutdown=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Maps/Main_Scene
-MRUItem1=/Game/Mesh/MeshtoUE4/wall
-MRUItem2=/Game/AI/BT_Enemy
-MRUItem3=/Game/AI/EnemyAI
-MRUItem4=/Game/Maps/MainMenuLevel
-MRUItem5=/Game/Mesh/MeshtoUE4/present_3
-MRUItem6=/Game/Mesh/MeshtoUE4/present_2
-MRUItem7=/Game/Mesh/MeshtoUE4/present
-MRUItem8=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem9=/Game/Maps/Silouane_Quentin_Scene
-MRUItem10=/Game/Maps/AntoineScene
-MRUItem11=/Game/Mesh/MeshtoUE4/floor
-MRUItem12=/Game/Mesh/Materials/Wall
-MRUItem13=/Game/Mesh/Materials/Floor
-MRUItem14=/Game/Mesh/Materials/PresentPink
-MRUItem15=/Game/Mesh/Materials/PresentBlue
-MRUItem16=/Game/Mesh/Materials/present
-MRUItem17=/Game/Mesh/Materials/Face
-MRUItem18=/Game/Mesh/Materials/Pauliam
-MRUItem19=/Game/Mesh/Materials/Daddy
+MRUItem0=/Game/AI/EnemyAI
+MRUItem1=/Game/Mesh/Materials/FaceBlue
+MRUItem2=/Game/Mesh/Materials/Face
+MRUItem3=/Game/Maps/Main_Scene
+MRUItem4=/Game/Mesh/MeshtoUE4/wall
+MRUItem5=/Game/AI/BT_Enemy
+MRUItem6=/Game/Maps/MainMenuLevel
+MRUItem7=/Game/Mesh/MeshtoUE4/present_3
+MRUItem8=/Game/Mesh/MeshtoUE4/present_2
+MRUItem9=/Game/Mesh/MeshtoUE4/present
+MRUItem10=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem11=/Game/Maps/Silouane_Quentin_Scene
+MRUItem12=/Game/Maps/AntoineScene
+MRUItem13=/Game/Mesh/MeshtoUE4/floor
+MRUItem14=/Game/Mesh/Materials/Wall
+MRUItem15=/Game/Mesh/Materials/Floor
+MRUItem16=/Game/Mesh/Materials/PresentPink
+MRUItem17=/Game/Mesh/Materials/PresentBlue
+MRUItem18=/Game/Mesh/Materials/present
+MRUItem19=/Game/Mesh/Materials/Pauliam
 
 [DetailCategories]
 FirstPersonCharacter_C.Default=True
@@ -1625,15 +1625,15 @@ InstalledPlugins=XRVisualization
 StaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" "
 StaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 MeshComponent="\"Object.Collision.BodyInstance\" "
-MeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+MeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PrimitiveComponent=
-PrimitiveComponent="\"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 None=======
 None=======
 None=======
-SceneComponent="\"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-ActorComponent="\"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-Object="\"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SceneComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ActorComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Object=
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1770,6 +1770,7 @@ None=======
 /Game/Mesh/MeshtoUE4/present.present=1
 /Game/Mesh/MeshtoUE4/present_2.present_2=1
 /Game/Mesh/MeshtoUE4/present_3.present_3=1
+/Game/Mesh/Materials/FaceBlue.FaceBlue=1
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
@@ -1818,6 +1819,7 @@ CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
 
 [PlacementMode]
+RecentlyPlaced=/Game/Mesh/Materials/Bebou.Bebou;
 RecentlyPlaced=/Game/Mesh/MeshtoUE4/present.present;
 RecentlyPlaced=/Game/Mesh/MeshtoUE4/wall.wall;
 RecentlyPlaced=/Game/Mesh/MeshtoUE4/floor.floor;
@@ -1837,7 +1839,6 @@ RecentlyPlaced=/Game/AI/Anims/Cop_Character.Cop_Character;
 RecentlyPlaced=/Game/FirstPersonBP/Blueprints/Clock.Clock;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
-RecentlyPlaced=/Game/FirstPersonBP/Blueprints/PickableObject_2.PickableObject_2;
 None=======
 
 [MessageLog]
