--- a/ChristmasJam21Team8/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ChristmasJam21Team8/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -256,7 +256,7 @@ WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.Ax
 K2Node_CustomEvent=K2Node_CustomEvent.Inputs.InputArgument1,
 BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis,
 FirstPersonCharacter_C=FirstPersonCharacter_C.Physics.ConstraintsGroup,FirstPersonCharacter_C.Rendering.TextureStreaming,FirstPersonCharacter_C.Rendering.LOD,
-FirstPersonCharacter_C=StaticMeshActor.Collision.Collision,FirstPersonCharacter_C.Physics.ConstraintsGroup,FirstPersonCharacter_C.Rendering.TextureStreaming,FirstPersonCharacter_C.Rendering.LOD,
+FirstPersonCharacter_C=PropertyWrapper.DefaultValueCategory.None,FirstPersonCharacter_C.Physics.ConstraintsGroup,FirstPersonCharacter_C.Rendering.TextureStreaming,FirstPersonCharacter_C.Rendering.LOD,StaticMeshActor.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,FirstPersonCharacter_C.Collision.Collision,
 CapsuleComponent=
 CapsuleComponent=
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.None,EnemyAI_C.Physics.ConstraintsGroup,EnemyAI_C.Collision.Collision,EnemyAI_C.Rendering.TextureStreaming,EnemyAI_C.Rendering.LOD,
@@ -277,7 +277,7 @@ PickableObject_2_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshCompon
 EnemyAI_C=PropertyWrapper.DefaultValueCategory.None,EnemyAI_C.Physics.ConstraintsGroup,EnemyAI_C.Collision.Collision,EnemyAI_C.Rendering.TextureStreaming,EnemyAI_C.Rendering.LOD,
 BTT_ChangeMoveSpeed_C=
 Character=PropertyWrapper.DefaultValueCategory.None,
-CharacterMovementComponent=
+CharacterMovementComponent=PropertyWrapper.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Collision.Collision,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,FirstPersonCharacter_C.Physics.ConstraintsGroup,FirstPersonCharacter_C.Rendering.TextureStreaming,FirstPersonCharacter_C.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,FirstPersonCharacter_C.Collision.Collision,
 BTT_GetNextPatrolPoint_C=
 BTT_ResetLostSight_C=
 Clock_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Rendering.TextureStreaming,
@@ -383,19 +383,22 @@ LastLevel=/Game/Maps/Main_Scene
 [AssetEditorSubsystem]
 CleanShutdown=True
 CleanShutdown=False
+OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
+OpenAssetsAtExit=/Game/AI/BT_Enemy.BT_Enemy
+OpenAssetsAtExit=/Game/AI/BB_Enemy.BB_Enemy
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AI/EnemyAI
-MRUItem1=/Game/Mesh/Materials/FaceBlue
-MRUItem2=/Game/Mesh/Materials/Face
-MRUItem3=/Game/Maps/Main_Scene
-MRUItem4=/Game/Mesh/MeshtoUE4/wall
-MRUItem5=/Game/AI/BT_Enemy
-MRUItem6=/Game/Maps/MainMenuLevel
-MRUItem7=/Game/Mesh/MeshtoUE4/present_3
-MRUItem8=/Game/Mesh/MeshtoUE4/present_2
-MRUItem9=/Game/Mesh/MeshtoUE4/present
-MRUItem10=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem0=/Game/AI/BT_Enemy
+MRUItem1=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem2=/Game/AI/EnemyAI
+MRUItem3=/Game/Mesh/Materials/FaceBlue
+MRUItem4=/Game/Mesh/Materials/Face
+MRUItem5=/Game/Maps/Main_Scene
+MRUItem6=/Game/Mesh/MeshtoUE4/wall
+MRUItem7=/Game/Maps/MainMenuLevel
+MRUItem8=/Game/Mesh/MeshtoUE4/present_3
+MRUItem9=/Game/Mesh/MeshtoUE4/present_2
+MRUItem10=/Game/Mesh/MeshtoUE4/present
 MRUItem11=/Game/Maps/Silouane_Quentin_Scene
 MRUItem12=/Game/Maps/AntoineScene
 MRUItem13=/Game/Mesh/MeshtoUE4/floor
@@ -1627,12 +1630,12 @@ StaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Collision.Bo
 MeshComponent="\"Object.Collision.BodyInstance\" "
 MeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PrimitiveComponent=
-PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PrimitiveComponent=
 None=======
 None=======
 None=======
-SceneComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-ActorComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SceneComponent=
+ActorComponent=
 Object=
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
@@ -1647,11 +1650,11 @@ K2Node=
 EdGraphNode="\"Object.AI.AI|BehaviorTree\" "
 EdGraphNode="\"Object.AI.AI|BehaviorTree\" "
 FirstPersonCharacter_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Actor.Tags\" "
-FirstPersonCharacter_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+FirstPersonCharacter_C=
 Character="\"Object.Default.patrolPositions\" "
-Character="\"Object.Default.patrolPositions\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+Character=
 Pawn="\"Object.Default.patrolPositions\" "
-Pawn="\"Object.Default.patrolPositions\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+Pawn=
 Shelf_Blueprint_C="\"Object.Item\" "
 StaticMeshActor=
 etagere_Blueprint_C=
@@ -1700,10 +1703,10 @@ CanvasPanel="\"Object.Layout.Slot\" "
 Enemy_AnimBP_C=
 AnimInstance=
 NavModifierVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-CharacterMovementComponent="\"Object.NavMovement.NavAgentProps\" "
-PawnMovementComponent="\"Object.NavMovement.NavAgentProps\" "
-NavMovementComponent="\"Object.NavMovement.NavAgentProps\" "
-MovementComponent="\"Object.NavMovement.NavAgentProps\" "
+CharacterMovementComponent=
+PawnMovementComponent=
+NavMovementComponent=
+MovementComponent=
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" "
 
 [DetailMultiObjectNodeExpansion]
