--- a/ChristmasJam21Team8/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ChristmasJam21Team8/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -128,11 +128,11 @@ GridEnabled=False
 
 [MRU]
 MRUItem0=/Game/Maps/Main_Scene
-MRUItem1=/Game/Maps/MainMenuLevel
+MRUItem1=/Game/Maps/FirstPersonExampleMap
 MRUItem2=/Game/Maps/Silouane_Quentin_Scene
-MRUItem3=/Game/Maps/AntoineScene
-MRUItem4=/Game/Maps/RomainScene
-MRUItem5=/Game/Maps/FirstPersonExampleMap
+MRUItem3=/Game/Maps/MainMenuLevel
+MRUItem4=/Game/Maps/AntoineScene
+MRUItem5=/Game/Maps/RomainScene
 MRUItem6=/Game/Maps/GameScene
 MRUItem7=/Game/Maps/Game
 MRUItem8=/Game/Maps/GameOverScene
@@ -256,9 +256,9 @@ WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.Ax
 K2Node_CustomEvent=K2Node_CustomEvent.Inputs.InputArgument1,
 BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis,
 FirstPersonCharacter_C=FirstPersonCharacter_C.Physics.ConstraintsGroup,FirstPersonCharacter_C.Rendering.TextureStreaming,FirstPersonCharacter_C.Rendering.LOD,
-FirstPersonCharacter_C=PropertyWrapper.DefaultValueCategory.None,FirstPersonCharacter_C.Physics.ConstraintsGroup,FirstPersonCharacter_C.Rendering.TextureStreaming,FirstPersonCharacter_C.Rendering.LOD,StaticMeshActor.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,FirstPersonCharacter_C.Collision.Collision,
+FirstPersonCharacter_C=
 CapsuleComponent=
-CapsuleComponent=
+CapsuleComponent=CapsuleComponent.Collision.Collision,
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.None,EnemyAI_C.Physics.ConstraintsGroup,EnemyAI_C.Collision.Collision,EnemyAI_C.Rendering.TextureStreaming,EnemyAI_C.Rendering.LOD,
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Collision.Collision,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,FirstPersonCharacter_C.Physics.ConstraintsGroup,FirstPersonCharacter_C.Rendering.TextureStreaming,FirstPersonCharacter_C.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,FirstPersonCharacter_C.Collision.Collision,
 Shelf_Blueprint_C=
@@ -294,6 +294,8 @@ NavModifierVolume=PropertyWrapper.DefaultValueCategory.None,EnemyAI_C.Physics.Co
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,
 MaterialInstanceConstant=
 NavMeshBoundsVolume=PropertyWrapper.DefaultValueCategory.None,EnemyAI_C.Physics.ConstraintsGroup,EnemyAI_C.Collision.Collision,EnemyAI_C.Rendering.TextureStreaming,EnemyAI_C.Rendering.LOD,
+SphereComponent=SphereComponent.Collision.Collision,
+SkeletalMeshComponent=SkeletalMeshComponent.Collision.Collision,
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Blueprints
@@ -385,26 +387,26 @@ CleanShutdown=True
 CleanShutdown=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem1=/Game/Maps/Main_Scene
-MRUItem2=/Game/AI/BT_Enemy
-MRUItem3=/Game/AI/EnemyAI
-MRUItem4=/Game/Mesh/Materials/FaceBlue
-MRUItem5=/Game/Mesh/Materials/Face
-MRUItem6=/Game/Mesh/MeshtoUE4/wall
-MRUItem7=/Game/Maps/MainMenuLevel
-MRUItem8=/Game/Mesh/MeshtoUE4/present_3
-MRUItem9=/Game/Mesh/MeshtoUE4/present_2
-MRUItem10=/Game/Mesh/MeshtoUE4/present
-MRUItem11=/Game/Maps/Silouane_Quentin_Scene
-MRUItem12=/Game/Maps/AntoineScene
-MRUItem13=/Game/Mesh/MeshtoUE4/floor
-MRUItem14=/Game/Mesh/Materials/Wall
-MRUItem15=/Game/Mesh/Materials/Floor
-MRUItem16=/Game/Mesh/Materials/PresentPink
-MRUItem17=/Game/Mesh/Materials/PresentBlue
-MRUItem18=/Game/Mesh/Materials/present
-MRUItem19=/Game/Mesh/Materials/Pauliam
+MRUItem0=/Game/AI/EnemyAI
+MRUItem1=/Game/Shelf/PickableObject_2
+MRUItem2=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem3=/Game/Maps/Main_Scene
+MRUItem4=/Game/Maps/FirstPersonExampleMap
+MRUItem5=/Game/Maps/Silouane_Quentin_Scene
+MRUItem6=/Game/AI/BT_Enemy
+MRUItem7=/Game/Mesh/Materials/FaceBlue
+MRUItem8=/Game/Mesh/Materials/Face
+MRUItem9=/Game/Mesh/MeshtoUE4/wall
+MRUItem10=/Game/Maps/MainMenuLevel
+MRUItem11=/Game/Mesh/MeshtoUE4/present_3
+MRUItem12=/Game/Mesh/MeshtoUE4/present_2
+MRUItem13=/Game/Mesh/MeshtoUE4/present
+MRUItem14=/Game/Maps/AntoineScene
+MRUItem15=/Game/Mesh/MeshtoUE4/floor
+MRUItem16=/Game/Mesh/Materials/Wall
+MRUItem17=/Game/Mesh/Materials/Floor
+MRUItem18=/Game/Mesh/Materials/PresentPink
+MRUItem19=/Game/Mesh/Materials/PresentBlue
 
 [DetailCategories]
 FirstPersonCharacter_C.Default=True
@@ -1617,6 +1619,10 @@ MaterialExpressionConstant.MaterialExpressionConstant=True
 MaterialExpressionConstant.MaterialExpression=True
 CharacterMovementComponent.AssetUserData=True
 CharacterMovementComponent.Collision=True
+Main_Scene_C.Tick=True
+Main_Scene_C.Replication=True
+Main_Scene_C.Actor=True
+Main_Scene_C.Input=True
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -1627,13 +1633,13 @@ StaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Collision.Bo
 MeshComponent="\"Object.Collision.BodyInstance\" "
 MeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PrimitiveComponent=
-PrimitiveComponent=
+PrimitiveComponent="\"Object.Collision.BodyInstance\" "
 None=======
 None=======
 None=======
-SceneComponent=
-ActorComponent=
-Object=
+SceneComponent="\"Object.Collision.BodyInstance\" "
+ActorComponent="\"Object.Collision.BodyInstance\" "
+Object="\"Object.Collision.BodyInstance\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1649,9 +1655,9 @@ EdGraphNode="\"Object.AI.AI|BehaviorTree\" "
 FirstPersonCharacter_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Actor.Tags\" "
 FirstPersonCharacter_C=
 Character="\"Object.Default.patrolPositions\" "
-Character=
+Character="\"Object.Default.patrolPositions\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
 Pawn="\"Object.Default.patrolPositions\" "
-Pawn=
+Pawn="\"Object.Default.patrolPositions\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
 Shelf_Blueprint_C="\"Object.Item\" "
 StaticMeshActor=
 etagere_Blueprint_C=
@@ -1662,9 +1668,9 @@ EnemyAI_C="\"Object.Default.patrolPositions\" "
 EnemyAI_C="\"Object.Default.patrolPositions\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
 SkeletalMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SkinnedMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-CapsuleComponent=
+CapsuleComponent="\"Object.Collision.BodyInstance\" "
 ShapeComponent=
-ShapeComponent=
+ShapeComponent="\"Object.Collision.BodyInstance\" "
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" \"Object.Blackboard.Keys.Keys[1].KeyType\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1771,6 +1777,8 @@ None=======
 /Game/Mesh/MeshtoUE4/present_2.present_2=1
 /Game/Mesh/MeshtoUE4/present_3.present_3=1
 /Game/Mesh/Materials/FaceBlue.FaceBlue=1
+/Game/Maps/Main_Scene.Main_Scene:PersistentLevel.Main_Scene=1
+/Game/Shelf/PickableObject_2.PickableObject_2=1
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
@@ -1842,7 +1850,7 @@ RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBo
 None=======
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=PIE
 
 [MaterialEditor]
 PrimType=1
