--- a/ChristmasJam21Team8/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ChristmasJam21Team8/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -385,12 +385,14 @@ LastLevel=/Game/Maps/Main_Scene
 [AssetEditorSubsystem]
 CleanShutdown=True
 CleanShutdown=False
+OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
+OpenAssetsAtExit=/Game/Shelf/PickableObject_2.PickableObject_2
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AI/EnemyAI
-MRUItem1=/Game/Shelf/PickableObject_2
-MRUItem2=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem3=/Game/Maps/Main_Scene
+MRUItem0=/Game/Shelf/PickableObject_2
+MRUItem1=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem2=/Game/Maps/Main_Scene
+MRUItem3=/Game/AI/EnemyAI
 MRUItem4=/Game/Maps/FirstPersonExampleMap
 MRUItem5=/Game/Maps/Silouane_Quentin_Scene
 MRUItem6=/Game/AI/BT_Enemy
@@ -1638,8 +1640,8 @@ None=======
 None=======
 None=======
 SceneComponent="\"Object.Collision.BodyInstance\" "
-ActorComponent="\"Object.Collision.BodyInstance\" "
-Object="\"Object.Collision.BodyInstance\" "
+ActorComponent=
+Object=
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1655,9 +1657,9 @@ EdGraphNode="\"Object.AI.AI|BehaviorTree\" "
 FirstPersonCharacter_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Actor.Tags\" "
 FirstPersonCharacter_C=
 Character="\"Object.Default.patrolPositions\" "
-Character="\"Object.Default.patrolPositions\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+Character=
 Pawn="\"Object.Default.patrolPositions\" "
-Pawn="\"Object.Default.patrolPositions\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+Pawn=
 Shelf_Blueprint_C="\"Object.Item\" "
 StaticMeshActor=
 etagere_Blueprint_C=
@@ -1850,7 +1852,7 @@ RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBo
 None=======
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=MapCheck
 
 [MaterialEditor]
 PrimType=1
