--- a/ChristmasJam21Team8/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ChristmasJam21Team8/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -299,7 +299,7 @@ SkeletalMeshComponent=SkeletalMeshComponent.Collision.Collision,
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Blueprints
-ContentBrowserTab1.SelectedPaths=/Game/Shelf
+ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Blueprints
 None=======
 None=======
 PickableObject_2_C=PropertyWrapper.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Collision.Collision,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,
@@ -380,21 +380,18 @@ ContentBrowserTab2.ThumbnailSizeScale=0.180000
 ContentBrowserTab2.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/Maps/Main_Scene
+LastLevel=/Game/Maps/MainMenuLevel
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 CleanShutdown=True
 OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
-OpenAssetsAtExit=/Game/Shelf/PickableObject_2.PickableObject_2
-OpenAssetsAtExit=/Game/AI/EnemyAI.EnemyAI
-OpenAssetsAtExit=/Game/Shelf/Non_Pickable_Item_Blueprint.Non_Pickable_Item_Blueprint
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Shelf/Non_Pickable_Item_Blueprint
-MRUItem1=/Game/AI/EnemyAI
-MRUItem2=/Game/Shelf/PickableObject_2
-MRUItem3=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem0=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem1=/Game/Shelf/Non_Pickable_Item_Blueprint
+MRUItem2=/Game/AI/EnemyAI
+MRUItem3=/Game/Shelf/PickableObject_2
 MRUItem4=/Game/Maps/Main_Scene
 MRUItem5=/Game/Maps/FirstPersonExampleMap
 MRUItem6=/Game/Maps/Silouane_Quentin_Scene
@@ -1659,9 +1656,9 @@ EdGraphNode="\"Object.AI.AI|BehaviorTree\" "
 FirstPersonCharacter_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Actor.Tags\" "
 FirstPersonCharacter_C=
 Character="\"Object.Default.patrolPositions\" "
-Character="\"Object.Default.patrolPositions\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+Character=
 Pawn="\"Object.Default.patrolPositions\" "
-Pawn="\"Object.Default.patrolPositions\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+Pawn=
 Shelf_Blueprint_C="\"Object.Item\" "
 StaticMeshActor=
 etagere_Blueprint_C=
