--- a/ChristmasJam21Team8/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ChristmasJam21Team8/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -258,7 +258,7 @@ BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis,
 FirstPersonCharacter_C=FirstPersonCharacter_C.Physics.ConstraintsGroup,FirstPersonCharacter_C.Rendering.TextureStreaming,FirstPersonCharacter_C.Rendering.LOD,
 FirstPersonCharacter_C=PropertyWrapper.DefaultValueCategory.None,FirstPersonCharacter_C.Physics.ConstraintsGroup,FirstPersonCharacter_C.Rendering.TextureStreaming,FirstPersonCharacter_C.Rendering.LOD,StaticMeshActor.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,FirstPersonCharacter_C.Collision.Collision,
 CapsuleComponent=
-CapsuleComponent=PropertyWrapper.DefaultValueCategory.None,EnemyAI_C.Physics.ConstraintsGroup,EnemyAI_C.Collision.Collision,EnemyAI_C.Rendering.TextureStreaming,EnemyAI_C.Rendering.LOD,
+CapsuleComponent=
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.None,EnemyAI_C.Physics.ConstraintsGroup,EnemyAI_C.Collision.Collision,EnemyAI_C.Rendering.TextureStreaming,EnemyAI_C.Rendering.LOD,
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Collision.Collision,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,FirstPersonCharacter_C.Physics.ConstraintsGroup,FirstPersonCharacter_C.Rendering.TextureStreaming,FirstPersonCharacter_C.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,FirstPersonCharacter_C.Collision.Collision,
 Shelf_Blueprint_C=
@@ -287,7 +287,7 @@ WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 BP_Sky_Sphere_C=StaticMeshActor.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,EnemyAI_C.Physics.ConstraintsGroup,EnemyAI_C.Collision.Collision,EnemyAI_C.Rendering.TextureStreaming,EnemyAI_C.Rendering.LOD,
 Enemy_AnimBP_C=
 PickableObject_C=PropertyWrapper.DefaultValueCategory.None,EnemyAI_C.Physics.ConstraintsGroup,EnemyAI_C.Collision.Collision,EnemyAI_C.Rendering.TextureStreaming,EnemyAI_C.Rendering.LOD,
-BrushComponent=PropertyWrapper.DefaultValueCategory.None,EnemyAI_C.Physics.ConstraintsGroup,EnemyAI_C.Collision.Collision,EnemyAI_C.Rendering.TextureStreaming,EnemyAI_C.Rendering.LOD,
+BrushComponent=
 PlayerStart=PropertyWrapper.DefaultValueCategory.None,EnemyAI_C.Physics.ConstraintsGroup,EnemyAI_C.Collision.Collision,EnemyAI_C.Rendering.TextureStreaming,EnemyAI_C.Rendering.LOD,
 Brush=PropertyWrapper.DefaultValueCategory.None,EnemyAI_C.Physics.ConstraintsGroup,EnemyAI_C.Collision.Collision,EnemyAI_C.Rendering.TextureStreaming,EnemyAI_C.Rendering.LOD,
 NavModifierVolume=PropertyWrapper.DefaultValueCategory.None,EnemyAI_C.Physics.ConstraintsGroup,EnemyAI_C.Collision.Collision,EnemyAI_C.Rendering.TextureStreaming,EnemyAI_C.Rendering.LOD,
@@ -297,7 +297,7 @@ NavMeshBoundsVolume=PropertyWrapper.DefaultValueCategory.None,EnemyAI_C.Physics.
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Blueprints
-ContentBrowserTab1.SelectedPaths=/Game/Maps
+ContentBrowserTab1.SelectedPaths=/Game/Mesh/TexturestoUE4/Lamp
 None=======
 None=======
 PickableObject_2_C=PropertyWrapper.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Collision.Collision,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,
@@ -382,29 +382,29 @@ LastLevel=/Game/Maps/Main_Scene
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-CleanShutdown=False
+CleanShutdown=True
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Maps/Main_Scene
-MRUItem1=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem2=/Game/AI/BT_Enemy
-MRUItem3=/Game/AI/EnemyAI
-MRUItem4=/Game/Mesh/Materials/FaceBlue
-MRUItem5=/Game/Mesh/Materials/Face
-MRUItem6=/Game/Mesh/MeshtoUE4/wall
-MRUItem7=/Game/Maps/MainMenuLevel
-MRUItem8=/Game/Mesh/MeshtoUE4/present_3
-MRUItem9=/Game/Mesh/MeshtoUE4/present_2
-MRUItem10=/Game/Mesh/MeshtoUE4/present
-MRUItem11=/Game/Maps/Silouane_Quentin_Scene
-MRUItem12=/Game/Maps/AntoineScene
-MRUItem13=/Game/Mesh/MeshtoUE4/floor
-MRUItem14=/Game/Mesh/Materials/Wall
-MRUItem15=/Game/Mesh/Materials/Floor
-MRUItem16=/Game/Mesh/Materials/PresentPink
-MRUItem17=/Game/Mesh/Materials/PresentBlue
-MRUItem18=/Game/Mesh/Materials/present
-MRUItem19=/Game/Mesh/Materials/Pauliam
+MRUItem1=/Game/Mesh/TexturestoUE4/Door/door
+MRUItem2=/Game/Mesh/TexturestoUE4/Door/MatDoor
+MRUItem3=/Game/Mesh/TexturestoUE4/Lamp/lamp
+MRUItem4=/Game/Mesh/TexturestoUE4/Lamp/MatLamp
+MRUItem5=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem6=/Game/AI/BT_Enemy
+MRUItem7=/Game/AI/EnemyAI
+MRUItem8=/Game/Mesh/Materials/FaceBlue
+MRUItem9=/Game/Mesh/Materials/Face
+MRUItem10=/Game/Mesh/MeshtoUE4/wall
+MRUItem11=/Game/Maps/MainMenuLevel
+MRUItem12=/Game/Mesh/MeshtoUE4/present_3
+MRUItem13=/Game/Mesh/MeshtoUE4/present_2
+MRUItem14=/Game/Mesh/MeshtoUE4/present
+MRUItem15=/Game/Maps/Silouane_Quentin_Scene
+MRUItem16=/Game/Maps/AntoineScene
+MRUItem17=/Game/Mesh/MeshtoUE4/floor
+MRUItem18=/Game/Mesh/Materials/Wall
+MRUItem19=/Game/Mesh/Materials/Floor
 
 [DetailCategories]
 FirstPersonCharacter_C.Default=True
@@ -1617,6 +1617,18 @@ MaterialExpressionConstant.MaterialExpressionConstant=True
 MaterialExpressionConstant.MaterialExpression=True
 CharacterMovementComponent.AssetUserData=True
 CharacterMovementComponent.Collision=True
+SpotLight.TransformCommon=True
+SpotLight.Light=True
+SpotLight.Rendering=True
+SpotLight.Lightmass=True
+SpotLight.Performance=True
+SpotLight.LightFunction=True
+SpotLight.Light Profiles=True
+SpotLight.DistanceFieldShadows=True
+SpotLight.RayTracing=True
+SpotLight.Tags=True
+SpotLight.Cooking=True
+SpotLight.Actor=True
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -1639,7 +1651,7 @@ DataAsset="\"Object.SkeletalMeshes\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 DestructibleMesh="\"Object.DestructibleMesh.DefaultDestructibleParameters.DepthParameters.DepthParameters[1]\" \"Object.Effects.FractureEffects.FractureEffects[1]\" \"Object.SkeletalMesh.Materials.Materials[1]\" "
 SkeletalMesh="\"Object.SkeletalMesh.Materials.Materials[1]\" "
-StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" "
+StreamableRenderAsset=
 AnimGraphNode_LayeredBoneBlend="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
 AnimGraphNode_BlendListBase="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
 AnimGraphNode_Base=
@@ -1704,7 +1716,7 @@ CharacterMovementComponent=
 PawnMovementComponent=
 NavMovementComponent=
 MovementComponent=
-StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" "
+StaticMesh=
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -1771,6 +1783,10 @@ None=======
 /Game/Mesh/MeshtoUE4/present_2.present_2=1
 /Game/Mesh/MeshtoUE4/present_3.present_3=1
 /Game/Mesh/Materials/FaceBlue.FaceBlue=1
+/Game/Mesh/TexturestoUE4/Lamp/lamp.lamp=1
+/Game/Mesh/TexturestoUE4/Lamp/MatLamp.MatLamp=1
+/Game/Mesh/TexturestoUE4/Door/MatDoor.MatDoor=1
+/Game/Mesh/TexturestoUE4/Door/door.door=1
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
@@ -1819,6 +1835,10 @@ CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
+RecentlyPlaced=/Game/Mesh/TexturestoUE4/Lamp/lamp.lamp;
+RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
+RecentlyPlaced=/Game/Mesh/TexturestoUE4/Door/door.door;
 RecentlyPlaced=/Game/Mesh/Materials/Bebou.Bebou;
 RecentlyPlaced=/Game/Mesh/MeshtoUE4/present.present;
 RecentlyPlaced=/Game/Mesh/MeshtoUE4/wall.wall;
@@ -1828,7 +1848,6 @@ RecentlyPlaced=/Script/NavigationSystem.NavModifierVolume;/Engine/Transient.Acto
 RecentlyPlaced=/Game/Shelf/etagere_Blueprint.etagere_Blueprint;
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
-RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
 RecentlyPlaced=/Script/Engine.AtmosphericFog;/Engine/Transient.ActorFactoryAtmosphericFog_0
 RecentlyPlaced=/Game/Shelf/etagere.etagere;
 RecentlyPlaced=/Game/AI/Anims/run_Anim.run_Anim;
@@ -1836,13 +1855,10 @@ RecentlyPlaced=/Game/AI/Anims/run_slow_Anim.run_slow_Anim;
 RecentlyPlaced=/Game/AI/Anims/run_start_Anim.run_start_Anim;
 RecentlyPlaced=/Game/AI/Anims/walk_Anim.walk_Anim;
 RecentlyPlaced=/Game/AI/Anims/Cop_Character.Cop_Character;
-RecentlyPlaced=/Game/FirstPersonBP/Blueprints/Clock.Clock;
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 None=======
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=LightingResults
 
 [MaterialEditor]
 PrimType=1
