--- a/ChristmasJam21Team8/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ChristmasJam21Team8/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -296,7 +296,7 @@ MaterialInstanceConstant=
 NavMeshBoundsVolume=PropertyWrapper.DefaultValueCategory.None,EnemyAI_C.Physics.ConstraintsGroup,EnemyAI_C.Collision.Collision,EnemyAI_C.Rendering.TextureStreaming,EnemyAI_C.Rendering.LOD,
 Main_Scene_C=
 PlayerUI_C=
-PostProcessVolume=PostProcessVolume.Lens.Lens|Bloom,PostProcessVolume.Lens.Lens|Exposure,PostProcessVolume.Lens.Lens|Camera,PostProcessVolume.Lens.Lens|Lens Flares,
+PostProcessVolume=PostProcessVolume.Lens.Lens
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Blueprints
@@ -385,14 +385,12 @@ LastLevel=/Game/Maps/Main_Scene
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-CleanShutdown=True
-OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
-OpenAssetsAtExit=/Game/FirstPersonBP/UI/PlayerUI.PlayerUI
+CleanShutdown=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPersonBP/UI/PlayerUI
-MRUItem1=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem2=/Game/Maps/Main_Scene
+MRUItem0=/Game/Maps/Main_Scene
+MRUItem1=/Game/FirstPersonBP/UI/PlayerUI
+MRUItem2=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
 MRUItem3=/Game/FirstPersonBP/Blueprints/Clock
 MRUItem4=/Game/Maps/MainMenuLevel
 MRUItem5=/Game/AI/BTT_GetNextPatrolPoint
