--- a/ChristmasJam21Team8/Config/DefaultEngine.ini
+++ b/ChristmasJam21Team8/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Game/FirstPersonBP/Blueprints/ScoreGameInstance.ScoreGameInstance_C
 GameDefaultMap=/Game/Maps/MainMenuLevel.MainMenuLevel
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode.FirstPersonGameMode_C
